After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698774 - [MM 0.8] crashes on adding Alcatel x310 modem
[MM 0.8] crashes on adding Alcatel x310 modem
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: ModemManager
git master
Other Linux
: Normal critical
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-24 18:05 UTC by ria.freelander
Modified: 2013-04-24 21:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dirty workaround - disable segfaulting str (668 bytes, patch)
2013-04-24 19:12 UTC, ria.freelander
none Details | Review

Description ria.freelander 2013-04-24 18:05:01 UTC
Description:
Segfault always when trying to connect

Additional info:
* package version(s)
modemmanager 0.7.990-3
networkmanager 0.9.8.0-3
* config and/or log files etc.
ModemManager --debug: http://pastebin.com/H7w8Jjak
http://pastebin.com/hAegNVpW - full trace (build modemmanager with debug)
http://pastebin.com/iyiyqpLJ - disassembled crash point
4ac3a6d4f212b3fc04e004c85b89fd567e865ffa - my revision number (rebuild)

Steps to reproduce:

Enable ModemManager
Insert modem (I use Alcatel x310)
Try to connect via nm-applet

Distro ArchLinux.
Downstream report: https://bugs.archlinux.org/task/34931
Comment 1 ria.freelander 2013-04-24 19:12:33 UTC
Created attachment 242358 [details] [review]
dirty workaround - disable segfaulting str
Comment 2 Aleksander Morgado 2013-04-24 21:00:30 UTC
Should be fixed now in git master:

http://cgit.freedesktop.org/ModemManager/ModemManager/commit/?id=126d89b2f311b46784434db52a6614699bac83b5

Still, I need to review all the g_regex_match_full() calls, as I wrongly assumed that it would set the GError when no match was done.